gcc/cp/

2009-07-06  Simon Martin  <simartin@users.sourceforge.net>

	PR c++/40557
	* pt.c (perform_typedefs_access_check, get_types_needing_access_check,
	append_type_to_template_for_access_check_1): Use
	RECORD_OR_UNION_CODE_P.

gcc/testsuite/

2009-07-06  Simon Martin  <simartin@users.sourceforge.net>

	PR c++/40557
	* g++.dg/template/union2.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@149276 138bc75d-0d04-0410-961f-82ee72b054a4